portabilidade ao github pages
agora tem um arquivo html que utiliza um iframe para capturar o index base, apenas para o site funcionar corretamente no github pages, e atualizei o cmd colocando um botão de voltar, e atualizando o código css

--- a/paginas/prompt/index.html
+++ b/paginas/prompt/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="console">
         <header>
+            <a href="../base/index.html"><</a>
             <p>thalya@gomail.com</p>
+            <a href="#">X</a>
         </header>
         <div class="consolebody">
             <p>
@@ -21,5 +23,6 @@
             <p>C:\Wondos\Users\Thalya></p>
         </div>
     </div>
+    
 </body>
 </html>
